Bug 1408562 - Update Debugger frontend (10-13). r=jdescottes
MozReview-Commit-ID: 6qEViJ9Z2Nw

UltraBlame original commit: 47bb399c0621cf47178dbb2360dabeda70dc5eb6

--- a/devtools/client/debugger/new/debugger.css
+++ b/devtools/client/debugger/new/debugger.css
@@ -1,3 +1,522 @@
+menu
+{
+display
+:
+inline
+;
+padding
+:
+0
+;
+}
+menu
+>
+menuitem
+:
+:
+after
+{
+content
+:
+"
+\
+25BA
+"
+;
+float
+:
+right
+;
+padding
+-
+left
+:
+5px
+;
+}
+menu
+>
+menupopup
+{
+display
+:
+none
+;
+}
+menu
+>
+menuitem
+:
+hover
++
+menupopup
+menu
+>
+menupopup
+:
+hover
+{
+display
+:
+block
+;
+}
+menupopup
+{
+position
+:
+fixed
+;
+z
+-
+index
+:
+10000
+;
+background
+:
+white
+;
+border
+:
+1px
+solid
+#
+cccccc
+;
+padding
+:
+5px
+0
+;
+background
+:
+#
+f2f2f2
+;
+border
+-
+radius
+:
+5px
+;
+color
+:
+#
+585858
+;
+box
+-
+shadow
+:
+0
+0
+4px
+0
+rgba
+(
+190
+190
+190
+0
+.
+8
+)
+;
+min
+-
+width
+:
+130px
+;
+}
+menuitem
+{
+display
+:
+block
+;
+padding
+:
+0
+20px
+;
+line
+-
+height
+:
+20px
+;
+font
+-
+weight
+:
+500
+;
+font
+-
+size
+:
+13px
+;
+-
+moz
+-
+user
+-
+select
+:
+none
+;
+user
+-
+select
+:
+none
+;
+}
+menuitem
+:
+hover
+{
+background
+:
+#
+3780fb
+;
+color
+:
+white
+;
+cursor
+:
+pointer
+;
+}
+menuitem
+[
+disabled
+=
+true
+]
+{
+color
+:
+#
+cccccc
+;
+}
+menuitem
+[
+disabled
+=
+true
+]
+:
+hover
+{
+background
+-
+color
+:
+transparent
+;
+cursor
+:
+default
+;
+}
+menuitem
+[
+type
+=
+checkbox
+]
+:
+:
+before
+{
+content
+:
+"
+"
+;
+width
+:
+10px
+;
+display
+:
+inline
+-
+block
+;
+}
+menuitem
+[
+type
+=
+checkbox
+]
+[
+checked
+=
+true
+]
+:
+:
+before
+{
+content
+:
+"
+\
+2713
+"
+;
+left
+:
+-
+8px
+;
+position
+:
+relative
+;
+}
+menuseparator
+{
+border
+-
+bottom
+:
+1px
+solid
+#
+cacdd3
+;
+width
+:
+100
+%
+;
+height
+:
+5px
+;
+display
+:
+block
+;
+margin
+-
+bottom
+:
+5px
+;
+}
+#
+contextmenu
+-
+mask
+.
+show
+{
+position
+:
+fixed
+;
+top
+:
+0
+;
+left
+:
+0
+;
+width
+:
+100
+%
+;
+height
+:
+100
+%
+;
+z
+-
+index
+:
+999
+;
+}
+:
+root
+.
+theme
+-
+light
+:
+root
+.
+theme
+-
+light
+{
+-
+-
+theme
+-
+search
+-
+overlays
+-
+semitransparent
+:
+rgba
+(
+221
+225
+228
+0
+.
+66
+)
+;
+}
+*
+{
+box
+-
+sizing
+:
+border
+-
+box
+;
+}
+html
+body
+{
+height
+:
+100
+%
+;
+margin
+:
+0
+;
+padding
+:
+0
+;
+width
+:
+100
+%
+;
+}
+#
+mount
+{
+display
+:
+flex
+;
+height
+:
+100
+%
+;
+}
+:
+:
+-
+webkit
+-
+scrollbar
+{
+width
+:
+8px
+;
+height
+:
+8px
+;
+background
+:
+transparent
+;
+}
+:
+:
+-
+webkit
+-
+scrollbar
+-
+track
+{
+border
+-
+radius
+:
+8px
+;
+background
+:
+transparent
+;
+}
+:
+:
+-
+webkit
+-
+scrollbar
+-
+thumb
+{
+border
+-
+radius
+:
+8px
+;
+background
+:
+rgba
+(
+113
+113
+113
+0
+.
+5
+)
+;
+}
+:
+root
+.
+theme
+-
+dark
+.
+CodeMirror
+-
+scrollbar
+-
+filler
+{
+background
+:
+transparent
+;
+}
 .
 landing
 -
@@ -1838,525 +2357,6 @@ weight
 normal
 ;
 }
-menu
-{
-display
-:
-inline
-;
-padding
-:
-0
-;
-}
-menu
->
-menuitem
-:
-:
-after
-{
-content
-:
-"
-\
-25BA
-"
-;
-float
-:
-right
-;
-padding
--
-left
-:
-5px
-;
-}
-menu
->
-menupopup
-{
-display
-:
-none
-;
-}
-menu
->
-menuitem
-:
-hover
-+
-menupopup
-menu
->
-menupopup
-:
-hover
-{
-display
-:
-block
-;
-}
-menupopup
-{
-position
-:
-fixed
-;
-z
--
-index
-:
-10000
-;
-background
-:
-white
-;
-border
-:
-1px
-solid
-#
-cccccc
-;
-padding
-:
-5px
-0
-;
-background
-:
-#
-f2f2f2
-;
-border
--
-radius
-:
-5px
-;
-color
-:
-#
-585858
-;
-box
--
-shadow
-:
-0
-0
-4px
-0
-rgba
-(
-190
-190
-190
-0
-.
-8
-)
-;
-min
--
-width
-:
-130px
-;
-}
-menuitem
-{
-display
-:
-block
-;
-padding
-:
-0
-20px
-;
-line
--
-height
-:
-20px
-;
-font
--
-weight
-:
-500
-;
-font
--
-size
-:
-13px
-;
--
-moz
--
-user
--
-select
-:
-none
-;
-user
--
-select
-:
-none
-;
-}
-menuitem
-:
-hover
-{
-background
-:
-#
-3780fb
-;
-color
-:
-white
-;
-cursor
-:
-pointer
-;
-}
-menuitem
-[
-disabled
-=
-true
-]
-{
-color
-:
-#
-cccccc
-;
-}
-menuitem
-[
-disabled
-=
-true
-]
-:
-hover
-{
-background
--
-color
-:
-transparent
-;
-cursor
-:
-default
-;
-}
-menuitem
-[
-type
-=
-checkbox
-]
-:
-:
-before
-{
-content
-:
-"
-"
-;
-width
-:
-10px
-;
-display
-:
-inline
--
-block
-;
-}
-menuitem
-[
-type
-=
-checkbox
-]
-[
-checked
-=
-true
-]
-:
-:
-before
-{
-content
-:
-"
-\
-2713
-"
-;
-left
-:
--
-8px
-;
-position
-:
-relative
-;
-}
-menuseparator
-{
-border
--
-bottom
-:
-1px
-solid
-#
-cacdd3
-;
-width
-:
-100
-%
-;
-height
-:
-5px
-;
-display
-:
-block
-;
-margin
--
-bottom
-:
-5px
-;
-}
-#
-contextmenu
--
-mask
-.
-show
-{
-position
-:
-fixed
-;
-top
-:
-0
-;
-left
-:
-0
-;
-width
-:
-100
-%
-;
-height
-:
-100
-%
-;
-z
--
-index
-:
-999
-;
-}
-:
-root
-.
-theme
--
-light
-:
-root
-.
-theme
--
-light
-{
--
--
-theme
--
-search
--
-overlays
--
-semitransparent
-:
-rgba
-(
-221
-225
-228
-0
-.
-66
-)
-;
-}
-*
-{
-box
--
-sizing
-:
-border
--
-box
-;
-}
-html
-body
-{
-height
-:
-100
-%
-;
-margin
-:
-0
-;
-padding
-:
-0
-;
-width
-:
-100
-%
-;
-}
-#
-mount
-{
-display
-:
-flex
-;
-height
-:
-100
-%
-;
-}
-:
-:
--
-webkit
--
-scrollbar
-{
-width
-:
-8px
-;
-height
-:
-8px
-;
-background
-:
-transparent
-;
-}
-:
-:
--
-webkit
--
-scrollbar
--
-track
-{
-border
--
-radius
-:
-8px
-;
-background
-:
-transparent
-;
-}
-:
-:
--
-webkit
--
-scrollbar
--
-thumb
-{
-border
--
-radius
-:
-8px
-;
-background
-:
-rgba
-(
-113
-113
-113
-0
-.
-5
-)
-;
-}
-:
-root
-.
-theme
--
-dark
-.
-CodeMirror
--
-scrollbar
--
-filler
-{
-background
-:
-transparent
-;
-}
 .
 modal
 -
@@ -2369,6 +2369,12 @@ fixed
 display
 :
 flex
+;
+flex
+-
+direction
+:
+column
 ;
 align
 -
@@ -2411,17 +2417,20 @@ index
 .
 modal
 {
-top
+width
 :
-0
+80
+%
 ;
-margin
+height
 :
 auto
 ;
-width
+overflow
+-
+y
 :
-500px
+scroll
 ;
 background
 -
@@ -2436,14 +2445,6 @@ theme
 toolbar
 -
 background
-)
-;
-transform
-:
-translateY
-(
--
-250px
 )
 ;
 transition
@@ -2468,10 +2469,10 @@ box
 -
 shadow
 :
-0
-0
-10px
-2px
+1px
+1px
+3px
+1px
 var
 (
 -
@@ -2515,17 +2516,25 @@ transform
 :
 translateY
 (
-0px
+5px
 )
 ;
 }
 media
 (
-max
+min
 -
 width
 :
-520px
+580px
+)
+and
+(
+min
+-
+height
+:
+340px
 )
 {
 .
@@ -2533,13 +2542,49 @@ modal
 {
 width
 :
-80
+50
 %
 ;
-left
+}
+}
+media
+(
+min
+-
+height
 :
-10
-%
+340px
+)
+{
+.
+modal
+{
+height
+:
+auto
+;
+max
+-
+height
+:
+80vh
+;
+}
+.
+modal
+.
+entered
+.
+modal
+.
+exiting
+{
+transform
+:
+translateY
+(
+30px
+)
 ;
 }
 }
@@ -2753,17 +2798,6 @@ calc
 -
 1px
 )
-;
-}
-.
-shortcuts
--
-modal
-{
-width
-:
-45
-%
 ;
 }
 .
@@ -8932,9 +8966,6 @@ transparent
 padding
 :
 6px
-0
-.
-7em
 ;
 }
 .
@@ -8947,7 +8978,7 @@ commands
 >
 .
 action
-i
+img
 {
 height
 :
@@ -9064,8 +9095,37 @@ commands
 >
 .
 action
-svg
+>
+img
+.
+prettyPrint
 {
+mask
+:
+url
+(
+"
+chrome
+:
+/
+/
+devtools
+/
+skin
+/
+images
+/
+debugger
+/
+prettyPrint
+.
+svg
+"
+)
+no
+-
+repeat
+;
 height
 :
 16px
@@ -9073,6 +9133,82 @@ height
 width
 :
 16px
+;
+background
+:
+var
+(
+-
+-
+theme
+-
+body
+-
+color
+)
+;
+}
+.
+source
+-
+footer
+>
+.
+commands
+>
+.
+action
+>
+img
+.
+blackBox
+{
+mask
+:
+url
+(
+"
+chrome
+:
+/
+/
+devtools
+/
+skin
+/
+images
+/
+debugger
+/
+blackBox
+.
+svg
+"
+)
+no
+-
+repeat
+;
+height
+:
+16px
+;
+width
+:
+16px
+;
+background
+:
+var
+(
+-
+-
+theme
+-
+body
+-
+color
+)
 ;
 }
 .
@@ -9152,15 +9288,18 @@ radius
 source
 -
 footer
+>
 .
-black
--
-box
+commands
+>
 .
 blackboxed
-svg
+>
+img
+.
+blackBox
 {
-fill
+background
 :
 var
 (
@@ -11500,6 +11639,8 @@ preview
 popup
 .
 header
+-
+container
 {
 width
 :
@@ -11512,15 +11653,6 @@ height
 :
 20px
 ;
-border
--
-bottom
-:
-1px
-solid
-#
-cccccc
-;
 display
 :
 flex
@@ -11530,6 +11662,47 @@ flex
 direction
 :
 column
+;
+margin
+-
+bottom
+:
+5px
+;
+}
+.
+popover
+.
+preview
+-
+popup
+.
+header
+-
+container
+h3
+{
+margin
+:
+0
+;
+margin
+-
+bottom
+:
+5px
+;
+font
+-
+weight
+:
+normal
+;
+font
+-
+size
+:
+14px
 ;
 }
 .
@@ -13176,13 +13349,19 @@ font
 -
 size
 :
-11px
+12px
 ;
 line
 -
 height
 :
-14px
+15px
+;
+font
+-
+family
+:
+monospace
 ;
 }
 .
@@ -16733,6 +16912,72 @@ padding
 ;
 }
 .
+command
+-
+bar
+.
+bottom
+{
+justify
+-
+content
+:
+flex
+-
+end
+;
+}
+.
+command
+-
+bar
+.
+bottom
+>
+button
+{
+color
+:
+var
+(
+-
+-
+theme
+-
+comment
+)
+;
+width
+:
+26px
+;
+}
+.
+command
+-
+bar
+.
+bottom
+>
+button
+:
+hover
+{
+color
+:
+var
+(
+-
+-
+theme
+-
+body
+-
+color
+)
+;
+}
+.
 object
 -
 node
@@ -17790,24 +18035,49 @@ color
 source
 -
 tab
+img
 .
 prettyPrint
 {
-line
--
-height
+mask
 :
-0
-;
-}
-.
-source
--
-tab
-.
+url
+(
+"
+chrome
+:
+/
+/
+devtools
+/
+skin
+/
+images
+/
+debugger
+/
 prettyPrint
+.
 svg
-{
+"
+)
+no
+-
+repeat
+;
+mask
+-
+size
+:
+100
+%
+;
+padding
+-
+top
+:
+12px
+;
 height
 :
 12px
@@ -17815,6 +18085,19 @@ height
 width
 :
 12px
+;
+background
+:
+var
+(
+-
+-
+theme
+-
+highlight
+-
+blue
+)
 ;
 }
 .
@@ -17854,12 +18137,6 @@ tab
 .
 prettyPrint
 {
-line
--
-height
-:
-0
-;
 align
 -
 self
@@ -17871,10 +18148,49 @@ center
 source
 -
 tab
+img
 .
 blackBox
-svg
 {
+mask
+:
+url
+(
+"
+chrome
+:
+/
+/
+devtools
+/
+skin
+/
+images
+/
+debugger
+/
+blackBox
+.
+svg
+"
+)
+no
+-
+repeat
+;
+mask
+-
+size
+:
+100
+%
+;
+padding
+-
+top
+:
+12px
+;
 height
 :
 12px
@@ -17882,6 +18198,19 @@ height
 width
 :
 12px
+;
+background
+:
+var
+(
+-
+-
+theme
+-
+highlight
+-
+blue
+)
 ;
 }
 .
