Bug 1409340 - Ensure light theme on Windows 7 gets dark hover state on tabs. r=dao
MozReview-Commit-ID: H1ki0EotjSq

UltraBlame original commit: 997c84dda1a6707b8601aefb3c3621b62f316dfd

--- a/browser/themes/windows/compacttheme.css
+++ b/browser/themes/windows/compacttheme.css
@@ -256,6 +256,109 @@ color
 important
 ;
 }
+.
+tabbrowser
+-
+tab
+:
+hover
+>
+.
+tab
+-
+stack
+>
+.
+tab
+-
+background
+:
+not
+(
+[
+selected
+=
+true
+]
+)
+:
+-
+moz
+-
+lwtheme
+-
+darktext
+{
+background
+-
+color
+:
+rgba
+(
+0
+0
+0
+.
+1
+)
+!
+important
+;
+}
+.
+tabbrowser
+-
+tab
+:
+hover
+>
+.
+tab
+-
+stack
+>
+.
+tab
+-
+background
+>
+.
+tab
+-
+line
+:
+not
+(
+[
+selected
+=
+true
+]
+)
+:
+-
+moz
+-
+lwtheme
+-
+darktext
+{
+background
+-
+color
+:
+rgba
+(
+0
+0
+0
+.
+2
+)
+!
+important
+;
+}
 }
 }
 media
