--- a/layout/reftests/forms/legend/shadow-dom.html
+++ b/layout/reftests/forms/legend/shadow-dom.html
@@ -814,6 +814,12 @@ appendChild
 e
 )
 ;
+document
+.
+body
+.
+offsetHeight
+;
 host6
 .
 appendChild
@@ -868,6 +874,12 @@ className
 "
 c
 "
+;
+document
+.
+body
+.
+offsetHeight
 ;
 host7
 .
@@ -927,6 +939,12 @@ appendChild
 (
 e
 )
+;
+document
+.
+body
+.
+offsetHeight
 ;
 var
 e
