--- a/browser/themes/shared/tabs.inc.css
+++ b/browser/themes/shared/tabs.inc.css
@@ -4067,6 +4067,35 @@ width
 40px
 ;
 }
+media
+(
+max
+-
+width
+:
+500px
+)
+{
+.
+titlebar
+-
+placeholder
+[
+type
+=
+"
+post
+-
+tabs
+"
+]
+{
+display
+:
+none
+;
+}
+}
 .
 titlebar
 -
