--- a/devtools/shim/aboutdevtools/aboutdevtools.css
+++ b/devtools/shim/aboutdevtools/aboutdevtools.css
@@ -1,9 +1,62 @@
+:
+root
+{
+-
+-
+blue
+-
+60
+:
+#
+0060df
+;
+-
+-
+blue
+-
+70
+:
+#
+003eaa
+;
+-
+-
+blue
+-
+80
+:
+#
+002275
+;
+-
+-
+grey
+-
+30
+:
+#
+d7d7db
+;
+-
+-
+white
+:
+#
+ffffff
+;
+}
 .
 box
 {
 width
 :
-980px
+100vw
+;
+max
+-
+width
+:
+850px
 ;
 display
 :
@@ -75,7 +128,7 @@ background
 -
 size
 :
-100
+85
 %
 ;
 background
@@ -142,8 +195,14 @@ top
 :
 1px
 solid
-#
-d7d7db
+var
+(
+-
+-
+grey
+-
+30
+)
 ;
 }
 .
@@ -209,21 +268,102 @@ margin
 1em
 20px
 }
-a
+.
+installpage
+-
+link
 {
 color
 :
-#
-0A84FF
+var
+(
+-
+-
+blue
+-
+60
+)
 ;
 }
-h1
+.
+installpage
+-
+link
+:
+:
+after
+{
+content
+:
+"
+"
+;
+display
+:
+inline
+-
+block
+;
+height
+:
+16px
+;
+width
+:
+16px
+;
+margin
+:
+0
+5px
+;
+vertical
+-
+align
+:
+middle
+;
+background
+-
+image
+:
+url
+(
+images
+/
+external
+-
+link
+.
+svg
+)
+;
+background
+-
+repeat
+:
+no
+-
+repeat
+;
+background
+-
+size
+:
+16px
+16px
+;
+}
+.
+installpage
+-
+title
 {
 font
 -
 size
 :
-36px
+33px
 ;
 margin
 -
@@ -254,10 +394,11 @@ display
 block
 ;
 margin
--
-top
 :
 2em
+0
+0
+0
 ;
 padding
 :
@@ -272,7 +413,7 @@ border
 -
 radius
 :
-3px
+2px
 ;
 font
 -
@@ -284,7 +425,7 @@ font
 -
 weight
 :
-600
+400
 ;
 line
 -
@@ -296,13 +437,23 @@ background
 -
 color
 :
-#
-0060df
+var
+(
+-
+-
+blue
+-
+60
+)
 ;
 color
 :
-#
-fff
+var
+(
+-
+-
+white
+)
 ;
 box
 -
@@ -339,8 +490,53 @@ background
 -
 color
 :
-#
-003eaa
+var
+(
+-
+-
+blue
+-
+70
+)
+}
+.
+installpage
+-
+button
+:
+active
+.
+installpage
+-
+button
+:
+hover
+:
+active
+.
+installpage
+-
+button
+:
+enabled
+:
+hover
+:
+active
+{
+background
+-
+color
+:
+var
+(
+-
+-
+blue
+-
+80
+)
+;
 }
 .
 installpage
