Bug 1408741 - Only give extra border on opened menubar menus in Windows classic. r=dao
MozReview-Commit-ID: CwRZnDKg336

UltraBlame original commit: 1a02e5bd8e9bb22f56286a37920518728e8bb42a

--- a/toolkit/themes/windows/global/menu.css
+++ b/toolkit/themes/windows/global/menu.css
@@ -537,17 +537,6 @@ top
 menubar
 >
 menu
-{
-border
-:
-2px
-solid
-transparent
-;
-}
-menubar
->
-menu
 [
 _moz
 -
@@ -575,6 +564,27 @@ color
 moz
 -
 menubarhovertext
+;
+}
+media
+(
+-
+moz
+-
+windows
+-
+classic
+)
+{
+menubar
+>
+menu
+{
+border
+:
+2px
+solid
+transparent
 ;
 }
 menubar
@@ -606,6 +616,7 @@ width
 1px
 3px
 ;
+}
 }
 menubar
 >
