Bug 1404065 - Update Synced Tabs buttons to photon style. r=markh
MozReview-Commit-ID: KSAwgRzys7p

UltraBlame original commit: 50b7295fd3fca9cfe5e78dd4956556bfb45eedb5

--- a/browser/themes/shared/customizableui/panelUI.inc.css
+++ b/browser/themes/shared/customizableui/panelUI.inc.css
@@ -7601,7 +7601,7 @@ background
 color
 :
 #
-0096dd
+0060df
 ;
 color
 :
@@ -7654,6 +7654,15 @@ prefs
 button
 :
 hover
+{
+background
+-
+color
+:
+#
+003eaa
+;
+}
 .
 PanelUI
 -
@@ -7672,7 +7681,7 @@ background
 color
 :
 #
-018acb
+002275
 ;
 }
 .
