--- a/browser/themes/shared/notification-icons.inc.css
+++ b/browser/themes/shared/notification-icons.inc.css
@@ -1210,6 +1210,63 @@ svg
 .
 popup
 -
+subitem
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+notification
+-
+icons
+/
+popup
+-
+subitem
+.
+svg
+"
+)
+;
+margin
+-
+inline
+-
+start
+:
+30px
+;
+}
+.
+identity
+-
+popup
+-
+popup
+-
+menulist
+{
+width
+:
+72px
+;
+}
+.
+popup
+-
 notification
 -
 icon
