Bug 1383300 - Show payment request total and origin in the dialog. r=MattN
MozReview-Commit-ID: 9taFJYmQnBP

UltraBlame original commit: 73115b197e0825fe7d3daee75fb9babfb7248eed

--- a/toolkit/components/payments/content/paymentDialog.xhtml
+++ b/toolkit/components/payments/content/paymentDialog.xhtml
@@ -114,6 +114,30 @@ title
 title
 >
 <
+link
+rel
+=
+"
+stylesheet
+"
+href
+=
+"
+chrome
+:
+/
+/
+payments
+/
+content
+/
+paymentDialog
+.
+css
+"
+/
+>
+<
 /
 head
 >
@@ -146,19 +170,6 @@ name
 =
 "
 paymentRequestFrame
-"
-src
-=
-"
-resource
-:
-/
-/
-payments
-/
-paymentRequest
-.
-xhtml
 "
 >
 <
