--- a/toolkit/components/payments/res/paymentRequest.xhtml
+++ b/toolkit/components/payments/res/paymentRequest.xhtml
@@ -167,6 +167,68 @@ div
 id
 =
 "
+host
+-
+name
+"
+>
+<
+/
+div
+>
+<
+div
+id
+=
+"
+total
+"
+>
+<
+h2
+class
+=
+"
+label
+"
+>
+<
+/
+h2
+>
+<
+span
+class
+=
+"
+value
+"
+>
+<
+/
+span
+>
+<
+span
+class
+=
+"
+currency
+"
+>
+<
+/
+span
+>
+<
+/
+div
+>
+<
+div
+id
+=
+"
 controls
 -
 container
