Backed out changeset 73115b197e08 (bug 1383300) for ESlint failure at toolkit/components/payments/test/PaymentTestUtils.jsm:26 and failing own browser_host_name.js. r=backout
UltraBlame original commit: 8e18b993db1ceb9f8e0b1c260a63bcfdff492f5b

--- a/toolkit/components/payments/content/paymentDialog.xhtml
+++ b/toolkit/components/payments/content/paymentDialog.xhtml
@@ -114,30 +114,6 @@ title
 title
 >
 <
-link
-rel
-=
-"
-stylesheet
-"
-href
-=
-"
-chrome
-:
-/
-/
-payments
-/
-content
-/
-paymentDialog
-.
-css
-"
-/
->
-<
 /
 head
 >
@@ -170,6 +146,19 @@ name
 =
 "
 paymentRequestFrame
+"
+src
+=
+"
+resource
+:
+/
+/
+payments
+/
+paymentRequest
+.
+xhtml
 "
 >
 <
