--- a/layout/reftests/css-animations/animation-on-empty-height-frame.html
+++ b/layout/reftests/css-animations/animation-on-empty-height-frame.html
@@ -158,6 +158,99 @@ MozAfterPaint
 =
 >
 {
+/
+/
+FIXME
+:
+Bug
+1341294
+.
+We
+need
+to
+wait
+for
+one
+more
+frame
+in
+the
+case
+/
+/
+the
+MozAfterPaint
+we
+received
+is
+not
+the
+one
+what
+we
+were
+waiting
+for
+.
+/
+/
+Note
+that
+we
+can
+'
+t
+just
+wait
+for
+one
+more
+MozAfterPaint
+since
+in
+the
+/
+/
+case
+where
+everything
+works
+correctly
+we
+won
+'
+t
+get
+another
+/
+/
+MozAfterPaint
+for
+a
+long
+time
+due
+to
+the
+step
+-
+end
+timing
+function
+/
+/
+applied
+to
+the
+animation
+.
+requestAnimationFrame
+(
+(
+)
+=
+>
+{
 document
 .
 documentElement
@@ -171,6 +264,9 @@ reftest
 -
 wait
 '
+)
+;
+}
 )
 ;
 }
