Bug 1409403 - Update badge icon for PWA. r=walkingice
MozReview-Commit-ID: IHaVLQ8xWPt

UltraBlame original commit: e23b6c9ee3940376bbe755103a27bad1d9c2141c

--- a/mobile/android/app/src/main/res/drawable/pwa_confirm_button.xml
+++ b/mobile/android/app/src/main/res/drawable/pwa_confirm_button.xml
@@ -118,9 +118,9 @@ android
 drawable
 =
 "
-drawable
+color
 /
-pwa_confirm_button_pressed
+pwa_confirm_btn_pressed
 "
 android
 :
@@ -147,9 +147,9 @@ android
 drawable
 =
 "
-drawable
+color
 /
-pwa_confirm_button_normal
+pwa_confirm_btn_normal
 "
 /
 >
