--- a/mobile/android/app/src/photon/res/values/colors.xml
+++ b/mobile/android/app/src/photon/res/values/colors.xml
@@ -2962,6 +2962,34 @@ transparent
 color
 >
 <
+color
+name
+=
+"
+pwa_confirm_btn_pressed
+"
+>
+#
+1B73CC
+<
+/
+color
+>
+<
+color
+name
+=
+"
+pwa_confirm_btn_normal
+"
+>
+#
+E60A84FF
+<
+/
+color
+>
+<
 /
 resources
 >
