--- a/mobile/android/app/src/main/res/layout/pwa_onboarding.xml
+++ b/mobile/android/app/src/main/res/layout/pwa_onboarding.xml
@@ -299,7 +299,14 @@ android
 layout_margin
 =
 "
-10dp
+28dp
+"
+android
+:
+adjustViewBounds
+=
+"
+true
 "
 android
 :
@@ -308,7 +315,7 @@ src
 "
 drawable
 /
-pwa_popup
+pwa_oboarding
 "
 /
 >
@@ -358,13 +365,6 @@ layout_marginStart
 =
 "
 15dp
-"
-android
-:
-layout_marginTop
-=
-"
-10dp
 "
 android
 :
