Bug 1405542 - Replace nav-bar top border and the tabs toolbar's negative margin with a box-shadow to avoid running into bug 477157. r=nhnt11
MozReview-Commit-ID: HFelefofjYY

UltraBlame original commit: f4343e2012854ea6806047359b7e39c716872359

--- a/browser/themes/linux/browser.css
+++ b/browser/themes/linux/browser.css
@@ -544,12 +544,30 @@ nav
 -
 bar
 {
-border
+box
 -
-top
+shadow
 :
-1px
-solid
+0
+calc
+(
+-
+1
+*
+var
+(
+-
+-
+tab
+-
+toolbar
+-
+navbar
+-
+overlap
+)
+)
+0
 var
 (
 -
@@ -558,26 +576,10 @@ tabs
 -
 border
 )
-!
-important
-;
-background
--
-clip
-:
-padding
--
-box
 ;
 position
 :
 relative
-;
-z
--
-index
-:
-1
 ;
 }
 #
@@ -3196,29 +3198,6 @@ height
 padding
 :
 0
-;
-margin
--
-bottom
-:
-calc
-(
--
-1
-*
-var
-(
--
--
-tab
--
-toolbar
--
-navbar
--
-overlap
-)
-)
 ;
 }
 #
