--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -714,19 +714,6 @@ above
 -
 tabbar
 )
--
-var
-(
--
--
-tab
--
-toolbar
--
-navbar
--
-overlap
-)
 )
 ;
 }
@@ -914,12 +901,30 @@ moz
 -
 lwtheme
 {
-border
+box
 -
-top
+shadow
 :
-1px
-solid
+0
+calc
+(
+-
+1
+*
+var
+(
+-
+-
+tab
+-
+toolbar
+-
+navbar
+-
+overlap
+)
+)
+0
 var
 (
 -
@@ -928,14 +933,6 @@ tabs
 -
 border
 )
-;
-background
--
-clip
-:
-padding
--
-box
 ;
 position
 :
@@ -4819,29 +4816,6 @@ moz
 appearance
 :
 none
-;
-margin
--
-bottom
-:
-calc
-(
--
-1
-*
-var
-(
--
--
-tab
--
-toolbar
--
-navbar
--
-overlap
-)
-)
 ;
 padding
 -
