--- a/browser/themes/windows/browser.css
+++ b/browser/themes/windows/browser.css
@@ -1781,24 +1781,36 @@ position
 :
 relative
 ;
-z
--
-index
-:
-1
-;
 }
 #
 nav
 -
 bar
 {
-border
+box
 -
-top
+shadow
 :
-1px
-solid
+0
+calc
+(
+-
+1
+*
+var
+(
+-
+-
+tab
+-
+toolbar
+-
+navbar
+-
+overlap
+)
+)
+0
 var
 (
 -
@@ -1807,8 +1819,6 @@ tabs
 -
 border
 )
-!
-important
 ;
 }
 media
@@ -1838,15 +1848,11 @@ nav
 -
 bar
 {
-border
+box
 -
-top
--
-style
+shadow
 :
 none
-!
-important
 ;
 }
 }
@@ -4747,29 +4753,6 @@ height
 padding
 :
 0
-;
-margin
--
-bottom
-:
-calc
-(
--
-1
-*
-var
-(
--
--
-tab
--
-toolbar
--
-navbar
--
-overlap
-)
-)
 ;
 }
 %
