Backed out 1 changesets (bug 1405542) for  failing in OS X (browser chrome test) at browser/base/content/test/performance/browser_windowopen_reflows.js on a CLOSED TREE.
Backed out changeset f4343e201285 (bug 1405542)

UltraBlame original commit: e1e574000af4d1d989d2ca3435dc7e7898691893

--- a/browser/themes/linux/browser.css
+++ b/browser/themes/linux/browser.css
@@ -544,30 +544,12 @@ nav
 -
 bar
 {
-box
+border
 -
-shadow
+top
 :
-0
-calc
-(
--
-1
-*
-var
-(
--
--
-tab
--
-toolbar
--
-navbar
--
-overlap
-)
-)
-0
+1px
+solid
 var
 (
 -
@@ -576,10 +558,26 @@ tabs
 -
 border
 )
+!
+important
+;
+background
+-
+clip
+:
+padding
+-
+box
 ;
 position
 :
 relative
+;
+z
+-
+index
+:
+1
 ;
 }
 #
@@ -3198,6 +3196,29 @@ height
 padding
 :
 0
+;
+margin
+-
+bottom
+:
+calc
+(
+-
+1
+*
+var
+(
+-
+-
+tab
+-
+toolbar
+-
+navbar
+-
+overlap
+)
+)
 ;
 }
 #
