--- a/browser/themes/windows/browser.css
+++ b/browser/themes/windows/browser.css
@@ -1781,36 +1781,24 @@ position
 :
 relative
 ;
+z
+-
+index
+:
+1
+;
 }
 #
 nav
 -
 bar
 {
-box
+border
 -
-shadow
+top
 :
-0
-calc
-(
--
-1
-*
-var
-(
--
--
-tab
--
-toolbar
--
-navbar
--
-overlap
-)
-)
-0
+1px
+solid
 var
 (
 -
@@ -1819,6 +1807,8 @@ tabs
 -
 border
 )
+!
+important
 ;
 }
 media
@@ -1848,11 +1838,15 @@ nav
 -
 bar
 {
-box
+border
 -
-shadow
+top
+-
+style
 :
 none
+!
+important
 ;
 }
 }
@@ -4753,6 +4747,29 @@ height
 padding
 :
 0
+;
+margin
+-
+bottom
+:
+calc
+(
+-
+1
+*
+var
+(
+-
+-
+tab
+-
+toolbar
+-
+navbar
+-
+overlap
+)
+)
 ;
 }
 %
