--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -714,6 +714,19 @@ above
 -
 tabbar
 )
+-
+var
+(
+-
+-
+tab
+-
+toolbar
+-
+navbar
+-
+overlap
+)
 )
 ;
 }
@@ -901,30 +914,12 @@ moz
 -
 lwtheme
 {
-box
+border
 -
-shadow
+top
 :
-0
-calc
-(
--
-1
-*
-var
-(
--
--
-tab
--
-toolbar
--
-navbar
--
-overlap
-)
-)
-0
+1px
+solid
 var
 (
 -
@@ -933,6 +928,14 @@ tabs
 -
 border
 )
+;
+background
+-
+clip
+:
+padding
+-
+box
 ;
 position
 :
@@ -4816,6 +4819,29 @@ moz
 appearance
 :
 none
+;
+margin
+-
+bottom
+:
+calc
+(
+-
+1
+*
+var
+(
+-
+-
+tab
+-
+toolbar
+-
+navbar
+-
+overlap
+)
+)
 ;
 padding
 -
