--- a/browser/themes/shared/customizableui/panelUI.inc.css
+++ b/browser/themes/shared/customizableui/panelUI.inc.css
@@ -10305,11 +10305,18 @@ margin
 :
 0
 ;
-padding
+}
+photonpanelmultiview
+.
+toolbaritem
 -
-inline
+combined
 -
-start
+buttons
+>
+spacer
+{
+width
 :
 36px
 ;
