Bug 1406590 - support single-dash arguments with values; r=mossop
UltraBlame original commit: 0820a044d45f449c1ca2e70ac7e26fc34bb27b18

--- a/browser/components/shell/test/test_headless_screenshot.html
+++ b/browser/components/shell/test/test_headless_screenshot.html
@@ -123,6 +123,27 @@ gre
 /
 modules
 /
+AppConstants
+.
+jsm
+"
+)
+;
+Components
+.
+utils
+.
+import
+(
+"
+resource
+:
+/
+/
+gre
+/
+modules
+/
 Services
 .
 jsm
@@ -864,6 +885,70 @@ waitForExplicitFinish
 (
 )
 ;
+/
+/
+On
+Windows
+nsICommandLine
+doesn
+'
+t
+support
+double
+-
+dash
+arguments
+/
+/
+nor
+single
+-
+dash
+arguments
+whose
+value
+is
+specified
+via
+an
+equals
+sign
+/
+/
+so
+we
+only
+test
+those
+variations
+on
+non
+-
+Windows
+platforms
+.
+/
+/
+Test
+all
+four
+basic
+variations
+of
+the
+"
+screenshot
+"
+argument
+/
+/
+when
+a
+file
+path
+is
+specified
+.
 await
 testFileCreationPositive
 (
@@ -896,6 +981,140 @@ screenshotPath
 screenshotPath
 )
 ;
+if
+(
+AppConstants
+.
+platform
+!
+=
+"
+win
+"
+)
+{
+await
+testFileCreationPositive
+(
+[
+"
+-
+url
+"
+"
+http
+:
+/
+/
+mochi
+.
+test
+:
+8888
+/
+headless
+.
+html
+"
+-
+screenshot
+=
+{
+screenshotPath
+}
+]
+screenshotPath
+)
+;
+await
+testFileCreationPositive
+(
+[
+"
+-
+url
+"
+"
+http
+:
+/
+/
+mochi
+.
+test
+:
+8888
+/
+headless
+.
+html
+"
+"
+-
+-
+screenshot
+"
+screenshotPath
+]
+screenshotPath
+)
+;
+await
+testFileCreationPositive
+(
+[
+"
+-
+url
+"
+"
+http
+:
+/
+/
+mochi
+.
+test
+:
+8888
+/
+headless
+.
+html
+"
+-
+-
+screenshot
+=
+{
+screenshotPath
+}
+]
+screenshotPath
+)
+;
+}
+/
+/
+Test
+variations
+of
+the
+"
+screenshot
+"
+argument
+when
+a
+file
+path
+/
+/
+isn
+'
+t
+specified
+.
 await
 testFileCreationPositive
 (
@@ -958,6 +1177,99 @@ png
 "
 )
 ;
+if
+(
+AppConstants
+.
+platform
+!
+=
+"
+win
+"
+)
+{
+await
+testFileCreationPositive
+(
+[
+"
+-
+-
+screenshot
+"
+"
+http
+:
+/
+/
+mochi
+.
+test
+:
+8888
+/
+headless
+.
+html
+"
+]
+"
+screenshot
+.
+png
+"
+)
+;
+await
+testFileCreationPositive
+(
+[
+"
+http
+:
+/
+/
+mochi
+.
+test
+:
+8888
+/
+headless
+.
+html
+"
+"
+-
+-
+screenshot
+"
+]
+"
+screenshot
+.
+png
+"
+)
+;
+}
+/
+/
+Test
+invalid
+URL
+arguments
+(
+either
+no
+argument
+or
+too
+many
+arguments
+)
+.
 await
 testFileCreationNegative
 (
@@ -1020,6 +1332,225 @@ png
 "
 )
 ;
+/
+/
+Test
+all
+four
+basic
+variations
+of
+the
+"
+window
+-
+size
+"
+argument
+.
+await
+testFileCreationPositive
+(
+[
+"
+-
+url
+"
+"
+http
+:
+/
+/
+mochi
+.
+test
+:
+8888
+/
+headless
+.
+html
+"
+"
+-
+screenshot
+"
+"
+-
+window
+-
+size
+"
+"
+800
+"
+]
+"
+screenshot
+.
+png
+"
+)
+;
+if
+(
+AppConstants
+.
+platform
+!
+=
+"
+win
+"
+)
+{
+await
+testFileCreationPositive
+(
+[
+"
+-
+url
+"
+"
+http
+:
+/
+/
+mochi
+.
+test
+:
+8888
+/
+headless
+.
+html
+"
+"
+-
+screenshot
+"
+"
+-
+window
+-
+size
+=
+800
+"
+]
+"
+screenshot
+.
+png
+"
+)
+;
+await
+testFileCreationPositive
+(
+[
+"
+-
+url
+"
+"
+http
+:
+/
+/
+mochi
+.
+test
+:
+8888
+/
+headless
+.
+html
+"
+"
+-
+screenshot
+"
+"
+-
+-
+window
+-
+size
+"
+"
+800
+"
+]
+"
+screenshot
+.
+png
+"
+)
+;
+await
+testFileCreationPositive
+(
+[
+"
+-
+url
+"
+"
+http
+:
+/
+/
+mochi
+.
+test
+:
+8888
+/
+headless
+.
+html
+"
+"
+-
+screenshot
+"
+"
+-
+-
+window
+-
+size
+=
+800
+"
+]
+"
+screenshot
+.
+png
+"
+)
+;
+}
+/
+/
+Test
+other
+variations
+of
+the
+"
+window
+-
+size
+"
+argument
+.
 await
 testWindowSizePositive
 (
@@ -1060,7 +1591,6 @@ html
 -
 screenshot
 "
-screenshotPath
 "
 -
 window
@@ -1071,7 +1601,11 @@ size
 hello
 "
 ]
-screenshotPath
+"
+screenshot
+.
+png
+"
 )
 ;
 await
@@ -1101,7 +1635,6 @@ html
 -
 screenshot
 "
-screenshotPath
 "
 -
 window
@@ -1112,7 +1645,11 @@ size
 800
 "
 ]
-screenshotPath
+"
+screenshot
+.
+png
+"
 )
 ;
 SimpleTest
