Bug 1400615 - Hide search icon in the search field of Storage Inspector. r=bgrins
MozReview-Commit-ID: HaguRMVPptx

UltraBlame original commit: afde6e60e63d07841359202a418548154385a149

--- a/devtools/client/themes/common.css
+++ b/devtools/client/themes/common.css
@@ -2799,6 +2799,30 @@ center
 .
 devtools
 -
+filterinput
+>
+.
+textbox
+-
+input
+-
+box
+>
+.
+textbox
+-
+search
+-
+sign
+{
+display
+:
+none
+;
+}
+.
+devtools
+-
 searchinput
 >
 .
