--- a/browser/themes/shared/sidebar.inc.css
+++ b/browser/themes/shared/sidebar.inc.css
@@ -410,7 +410,16 @@ border
 -
 radius
 :
-4px
+var
+(
+-
+-
+toolbarbutton
+-
+border
+-
+radius
+)
 ;
 border
 :
@@ -435,16 +444,15 @@ hover
 {
 background
 :
-hsla
+var
 (
-240
-5
-%
-5
-%
-0
-.
-05
+-
+-
+toolbarbutton
+-
+hover
+-
+background
 )
 ;
 }
@@ -456,19 +464,28 @@ switcher
 target
 :
 hover
+:
+active
+#
+sidebar
+-
+switcher
+-
+target
+.
+active
 {
-border
--
-color
+background
 :
-rgba
+var
 (
-0
-0
-0
-0
-.
-2
+-
+-
+toolbarbutton
+-
+active
+-
+background
 )
 ;
 }
@@ -481,15 +498,10 @@ target
 :
 hover
 :
-active
-#
-sidebar
 -
-switcher
+moz
 -
-target
-.
-active
+lwtheme
 {
 background
 :
@@ -516,6 +528,11 @@ target
 hover
 :
 active
+:
+-
+moz
+-
+lwtheme
 #
 sidebar
 -
@@ -524,19 +541,24 @@ switcher
 target
 .
 active
-{
-border
--
-color
 :
-rgba
+-
+moz
+-
+lwtheme
+{
+background
+:
+hsla
 (
-0
-0
-0
+240
+5
+%
+5
+%
 0
 .
-25
+15
 )
 ;
 }
