servo: Merge #18951 - Wait as late as possible to assign ClipIds (from mrobinson:later-id-assignment-for-clip-scroll-nodes); r=glennw,emilio
<!-- Please describe your changes on the following line: -->

---
<!-- Thank you for contributing to Servo! Please replace each `[ ]` by `[X]` when the step is complete, and replace `__` with appropriate data: -->
- [x] `./mach build -d` does not report any errors
- [x] `./mach test-tidy` does not report any errors
- [ ] These changes fix #__ (github issue number if applicable).

<!-- Either: -->
- [ ] There are tests for these changes OR
- [x] These changes do not require tests because they should not change behavior.

<!-- Also, please make sure that "Allow edits from maintainers" checkbox is checked, so that we can help you if you get stuck somewhere along the way.-->

<!-- Pull requests that do not address these steps are welcome, but they will require additional verification as part of the review process. -->

Source-Repo: https://github.com/servo/servo
Source-Revision: f26aa3b016beb5717d8a53477c162dd832b24d7e

UltraBlame original commit: 03a03dbbfcdd0d60039244f02051f622093c51ea

--- a/servo/resources/servo.css
+++ b/servo/resources/servo.css
@@ -1115,6 +1115,10 @@ increment
 :
 none
 ;
+overflow
+:
+visible
+;
 }
 *
 |
@@ -1150,6 +1154,10 @@ increment
 :
 none
 ;
+overflow
+:
+visible
+;
 }
 *
 |
@@ -1185,6 +1193,10 @@ increment
 :
 none
 ;
+overflow
+:
+visible
+;
 }
 *
 |
@@ -1219,6 +1231,10 @@ counter
 increment
 :
 none
+;
+overflow
+:
+visible
 ;
 }
 *
