Bug 1409377 - Prevent the app menu's scrollbar from overlapping its content. r=mikedeboer
MozReview-Commit-ID: EHx5yi0pW6B

UltraBlame original commit: 89cc8d814aa94c2808a15f07154abc71dd0ffeb2

--- a/browser/themes/shared/customizableui/panelUI.inc.css
+++ b/browser/themes/shared/customizableui/panelUI.inc.css
@@ -3490,7 +3490,7 @@ max
 -
 width
 :
-30em
+35em
 ;
 }
 #
@@ -10315,10 +10315,42 @@ combined
 buttons
 >
 spacer
+.
+before
+-
+label
 {
 width
 :
 36px
+;
+}
+photonpanelmultiview
+.
+toolbaritem
+-
+combined
+-
+buttons
+>
+spacer
+.
+after
+-
+label
+{
+-
+moz
+-
+box
+-
+flex
+:
+1
+;
+width
+:
+20px
 ;
 }
 photonpanelmultiview
