Backed out 3 changesets (bug 1410074) for Windows reftest failures.
Backed out changeset 5d54875788e3 (bug 1410074)
Backed out changeset 4d771e18c365 (bug 1410074)
Backed out changeset d045057cdf68 (bug 1410074)

UltraBlame original commit: f029da33b7e1c88d58951a193bc64ea4e5787f01

--- a/layout/style/test/test_media_queries.html
+++ b/layout/style/test/test_media_queries.html
@@ -6939,7 +6939,7 @@ proportional
 "
 )
 ;
-expression_should_not_be_parseable
+expression_should_be_parseable
 (
 "
 -
@@ -6951,7 +6951,7 @@ scrollbars
 "
 )
 ;
-expression_should_not_be_parseable
+expression_should_be_parseable
 (
 "
 -
@@ -6965,7 +6965,7 @@ theme
 "
 )
 ;
-expression_should_not_be_parseable
+expression_should_be_parseable
 (
 "
 -
@@ -6979,7 +6979,7 @@ theme
 "
 )
 ;
-expression_should_not_be_parseable
+expression_should_be_parseable
 (
 "
 -
@@ -6993,7 +6993,7 @@ theme
 "
 )
 ;
-expression_should_not_be_parseable
+expression_should_be_parseable
 (
 "
 -
@@ -7011,7 +7011,7 @@ titlebar
 "
 )
 ;
-expression_should_not_be_parseable
+expression_should_be_parseable
 (
 "
 -
@@ -7023,7 +7023,7 @@ compositor
 "
 )
 ;
-expression_should_not_be_parseable
+expression_should_be_parseable
 (
 "
 -
@@ -7035,7 +7035,7 @@ classic
 "
 )
 ;
-expression_should_not_be_parseable
+expression_should_be_parseable
 (
 "
 -
@@ -7047,15 +7047,13 @@ glass
 "
 )
 ;
-expression_should_not_be_parseable
+expression_should_be_parseable
 (
 "
 -
 moz
 -
-swipe
--
-animation
+touch
 -
 enabled
 "
@@ -7067,7 +7065,9 @@ expression_should_be_parseable
 -
 moz
 -
-touch
+swipe
+-
+animation
 -
 enabled
 "
@@ -7153,7 +7153,7 @@ proportional
 "
 )
 ;
-expression_should_not_be_parseable
+expression_should_be_parseable
 (
 "
 -
@@ -7167,7 +7167,7 @@ scrollbars
 "
 )
 ;
-expression_should_not_be_parseable
+expression_should_be_parseable
 (
 "
 -
@@ -7183,7 +7183,7 @@ theme
 "
 )
 ;
-expression_should_not_be_parseable
+expression_should_be_parseable
 (
 "
 -
@@ -7199,7 +7199,7 @@ theme
 "
 )
 ;
-expression_should_not_be_parseable
+expression_should_be_parseable
 (
 "
 -
@@ -7215,7 +7215,7 @@ theme
 "
 )
 ;
-expression_should_not_be_parseable
+expression_should_be_parseable
 (
 "
 -
@@ -7235,7 +7235,7 @@ titlebar
 "
 )
 ;
-expression_should_not_be_parseable
+expression_should_be_parseable
 (
 "
 -
@@ -7249,7 +7249,7 @@ compositor
 "
 )
 ;
-expression_should_not_be_parseable
+expression_should_be_parseable
 (
 "
 -
@@ -7263,7 +7263,7 @@ classic
 "
 )
 ;
-expression_should_not_be_parseable
+expression_should_be_parseable
 (
 "
 -
@@ -7277,15 +7277,13 @@ glass
 "
 )
 ;
-expression_should_not_be_parseable
+expression_should_be_parseable
 (
 "
 -
 moz
 -
-swipe
--
-animation
+touch
 -
 enabled
 :
@@ -7299,7 +7297,9 @@ expression_should_be_parseable
 -
 moz
 -
-touch
+swipe
+-
+animation
 -
 enabled
 :
@@ -7387,7 +7387,7 @@ proportional
 "
 )
 ;
-expression_should_not_be_parseable
+expression_should_be_parseable
 (
 "
 -
@@ -7401,7 +7401,7 @@ scrollbars
 "
 )
 ;
-expression_should_not_be_parseable
+expression_should_be_parseable
 (
 "
 -
@@ -7417,7 +7417,7 @@ theme
 "
 )
 ;
-expression_should_not_be_parseable
+expression_should_be_parseable
 (
 "
 -
@@ -7433,7 +7433,7 @@ theme
 "
 )
 ;
-expression_should_not_be_parseable
+expression_should_be_parseable
 (
 "
 -
@@ -7449,7 +7449,7 @@ theme
 "
 )
 ;
-expression_should_not_be_parseable
+expression_should_be_parseable
 (
 "
 -
@@ -7469,7 +7469,7 @@ titlebar
 "
 )
 ;
-expression_should_not_be_parseable
+expression_should_be_parseable
 (
 "
 -
@@ -7483,7 +7483,7 @@ compositor
 "
 )
 ;
-expression_should_not_be_parseable
+expression_should_be_parseable
 (
 "
 -
@@ -7497,7 +7497,7 @@ classic
 "
 )
 ;
-expression_should_not_be_parseable
+expression_should_be_parseable
 (
 "
 -
@@ -7511,15 +7511,13 @@ glass
 "
 )
 ;
-expression_should_not_be_parseable
+expression_should_be_parseable
 (
 "
 -
 moz
 -
-swipe
--
-animation
+touch
 -
 enabled
 :
@@ -7533,7 +7531,9 @@ expression_should_be_parseable
 -
 moz
 -
-touch
+swipe
+-
+animation
 -
 enabled
 :
@@ -8030,7 +8030,7 @@ windows
 theme
 media
 queries
-expression_should_not_be_parseable
+expression_should_be_parseable
 (
 "
 -
@@ -8044,7 +8044,7 @@ aero
 "
 )
 ;
-expression_should_not_be_parseable
+expression_should_be_parseable
 (
 "
 -
@@ -8060,7 +8060,7 @@ lite
 "
 )
 ;
-expression_should_not_be_parseable
+expression_should_be_parseable
 (
 "
 -
@@ -8076,7 +8076,7 @@ blue
 "
 )
 ;
-expression_should_not_be_parseable
+expression_should_be_parseable
 (
 "
 -
@@ -8092,7 +8092,7 @@ olive
 "
 )
 ;
-expression_should_not_be_parseable
+expression_should_be_parseable
 (
 "
 -
@@ -8108,7 +8108,7 @@ silver
 "
 )
 ;
-expression_should_not_be_parseable
+expression_should_be_parseable
 (
 "
 -
@@ -8122,7 +8122,7 @@ royale
 "
 )
 ;
-expression_should_not_be_parseable
+expression_should_be_parseable
 (
 "
 -
@@ -8136,7 +8136,7 @@ generic
 "
 )
 ;
-expression_should_not_be_parseable
+expression_should_be_parseable
 (
 "
 -
@@ -8150,7 +8150,7 @@ zune
 "
 )
 ;
-expression_should_not_be_parseable
+expression_should_be_parseable
 (
 "
 -
@@ -8203,7 +8203,7 @@ currently
 windows
 only
 )
-expression_should_not_be_parseable
+expression_should_be_parseable
 (
 "
 -
@@ -8219,7 +8219,7 @@ win7
 "
 )
 ;
-expression_should_not_be_parseable
+expression_should_be_parseable
 (
 "
 -
@@ -8235,7 +8235,7 @@ win8
 "
 )
 ;
-expression_should_not_be_parseable
+expression_should_be_parseable
 (
 "
 -
@@ -8270,7 +8270,7 @@ OpenType
 SVG
 media
 features
-query_should_not_be_parseable
+query_should_be_parseable
 (
 "
 (
@@ -8314,7 +8314,7 @@ glyph
 "
 )
 ;
-query_should_not_be_parseable
+query_should_be_parseable
 (
 "
 all
@@ -8330,7 +8330,7 @@ glyph
 "
 )
 ;
-query_should_not_be_parseable
+query_should_be_parseable
 (
 "
 not
@@ -8347,7 +8347,7 @@ glyph
 "
 )
 ;
-query_should_not_be_parseable
+query_should_be_parseable
 (
 "
 only
@@ -8364,61 +8364,9 @@ glyph
 "
 )
 ;
-query_should_not_be_parseable
+query_should_be_parseable
 (
 "
-(
--
-moz
--
-is
--
-glyph
-:
-0
-)
-"
-)
-;
-query_should_not_be_parseable
-(
-"
-not
-(
--
-moz
--
-is
--
-glyph
-:
-0
-)
-"
-)
-;
-query_should_not_be_parseable
-(
-"
-only
-(
--
-moz
--
-is
--
-glyph
-:
-0
-)
-"
-)
-;
-query_should_not_be_parseable
-(
-"
-all
-and
 (
 -
 moz
@@ -8436,6 +8384,39 @@ query_should_not_be_parseable
 (
 "
 not
+(
+-
+moz
+-
+is
+-
+glyph
+:
+0
+)
+"
+)
+;
+query_should_not_be_parseable
+(
+"
+only
+(
+-
+moz
+-
+is
+-
+glyph
+:
+0
+)
+"
+)
+;
+query_should_be_parseable
+(
+"
 all
 and
 (
@@ -8451,7 +8432,26 @@ glyph
 "
 )
 ;
-query_should_not_be_parseable
+query_should_be_parseable
+(
+"
+not
+all
+and
+(
+-
+moz
+-
+is
+-
+glyph
+:
+0
+)
+"
+)
+;
+query_should_be_parseable
 (
 "
 only
@@ -8470,7 +8470,7 @@ glyph
 "
 )
 ;
-query_should_not_be_parseable
+query_should_be_parseable
 (
 "
 (
@@ -8520,7 +8520,7 @@ glyph
 "
 )
 ;
-query_should_not_be_parseable
+query_should_be_parseable
 (
 "
 all
@@ -8538,7 +8538,7 @@ glyph
 "
 )
 ;
-query_should_not_be_parseable
+query_should_be_parseable
 (
 "
 not
@@ -8557,7 +8557,7 @@ glyph
 "
 )
 ;
-query_should_not_be_parseable
+query_should_be_parseable
 (
 "
 only
@@ -8648,7 +8648,7 @@ glyph
 "
 )
 ;
-should_not_apply
+should_apply
 (
 "
 not
@@ -8665,7 +8665,7 @@ glyph
 "
 )
 ;
-should_not_apply
+should_apply
 (
 "
 (
@@ -8681,7 +8681,7 @@ glyph
 "
 )
 ;
-should_not_apply
+should_apply
 (
 "
 not
@@ -8700,7 +8700,7 @@ glyph
 "
 )
 ;
-should_not_apply
+should_apply
 (
 "
 only
