Bug 1411657: Disable Pocket by default. r=liuche
From product (bug 1411657 comment 0):

Activity Stream may be pushed to a later release on desktop.  With that, we want
the Pocket stories feature to be put behind a feature flag on Firefox Android,so
we can launch the feature across all platforms simultaneously.

MozReview-Commit-ID: 3KmZir3tGPc

UltraBlame original commit: 38345cd61a3dd70fafc8e8bb3128b0ac8eb6ac41

--- a/mobile/android/app/src/main/res/values/bool.xml
+++ b/mobile/android/app/src/main/res/values/bool.xml
@@ -221,6 +221,32 @@ false
 bool
 >
 <
+!
+-
+-
+Pocket
+recommendations
+feature
+flag
+:
+change
+this
+to
+true
+when
+we
+want
+to
+ship
+(
+bug
+1411657
+)
+.
+-
+-
+>
+<
 bool
 name
 =
@@ -228,7 +254,7 @@ name
 pref_activitystream_pocket_enabled_default
 "
 >
-true
+false
 <
 /
 bool
