Bug 1411648 - Remove leftover z-index and bogus border from the nav bar. r=nhnt11
MozReview-Commit-ID: 5rdVAEHczZd

UltraBlame original commit: 60904a2148ce62fabb7c1522f41483d02e2caf42

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -934,16 +934,6 @@ tabs
 border
 )
 ;
-position
-:
-relative
-;
-z
--
-index
-:
-1
-;
 }
 media
 (
@@ -1055,12 +1045,30 @@ moz
 lwtheme
 )
 {
-border
+box
 -
-top
+shadow
 :
-1px
-solid
+0
+calc
+(
+-
+1
+*
+var
+(
+-
+-
+tab
+-
+toolbar
+-
+navbar
+-
+overlap
+)
+)
+0
 var
 (
 -
@@ -1069,24 +1077,6 @@ tabs
 -
 border
 )
-;
-background
--
-clip
-:
-padding
--
-box
-;
-position
-:
-relative
-;
-z
--
-index
-:
-1
 ;
 }
 }
