Bug 1411419 - Update Tiles new tab page to match Photon Design System r=dmose
MozReview-Commit-ID: Ix1Ylv3L4No

UltraBlame original commit: 352a1e6e471f4c9c2d63e2cc7eabcacce63fe1c9

--- a/browser/themes/shared/newtab/newTab.inc.css
+++ b/browser/themes/shared/newtab/newTab.inc.css
@@ -504,6 +504,27 @@ color
 :
 transparent
 ;
+fill
+:
+rgba
+(
+12
+12
+12
+0
+.
+6
+)
+;
+-
+moz
+-
+context
+-
+properties
+:
+fill
+;
 }
 #
 newtab
@@ -528,56 +549,10 @@ active
 {
 background
 -
-image
-:
--
-moz
--
-image
--
-rect
-(
-url
-(
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-newtab
-/
-controls
-.
-svg
-)
-0
-64
-32
-32
-)
-;
-background
--
 color
 :
 #
-FFFFFF
-;
-border
-:
-solid
-1px
-#
-CCCCCC
-;
-border
--
-radius
-:
-2px
+EDEDF0
 ;
 }
 #
@@ -627,7 +602,7 @@ corner
 -
 radius
 :
-8px
+4px
 ;
 background
 -
@@ -742,8 +717,8 @@ box
 shadow
 :
 0
-1px
-3px
+2px
+4px
 #
 c1c1c1
 ;
@@ -752,121 +727,6 @@ text
 decoration
 :
 none
-;
-transition
--
-property
-:
-top
-left
-opacity
-box
--
-shadow
-background
--
-color
-;
-}
-.
-newtab
--
-cell
-:
-not
-(
-[
-ignorehover
-]
-)
-.
-newtab
--
-control
-:
-hover
-~
-.
-newtab
--
-link
-.
-newtab
--
-cell
-:
-not
-(
-[
-ignorehover
-]
-)
-.
-newtab
--
-link
-:
-hover
-.
-newtab
--
-site
-[
-dragged
-]
-{
-border
-:
-2px
-solid
-white
-;
-box
--
-shadow
-:
-0
-0
-6px
-1px
-#
-add6ff
-;
-margin
-:
--
-2px
-;
-}
-.
-newtab
--
-site
-[
-dragged
-]
-{
-transition
--
-property
-:
-box
--
-shadow
-background
--
-color
-;
-background
--
-color
-:
-rgb
-(
-242
-242
-242
-)
 ;
 }
 .
@@ -1168,13 +1028,13 @@ background
 color
 :
 #
-F2F2F2
+F9F9FA
 ;
 font
 -
 size
 :
-13px
+14px
 ;
 line
 -
@@ -1214,6 +1074,18 @@ cell
 corner
 -
 radius
+)
+;
+color
+:
+rgba
+(
+12
+12
+13
+0
+.
+76
 )
 ;
 }
@@ -1293,17 +1165,6 @@ padding
 box
 ;
 }
-.
-newtab
--
-title
-{
-color
-:
-#
-5c5c5c
-;
-}
 body
 .
 compact
@@ -1344,18 +1205,9 @@ background
 color
 :
 #
-333
+4A4A4F
 ;
 border
--
-color
-:
-#
-333
-;
-border
--
-top
 -
 color
 :
@@ -1430,27 +1282,6 @@ pinned
 newtab
 -
 title
-{
-padding
--
-inline
--
-start
-:
-24px
-;
-}
-.
-newtab
--
-site
-[
-pinned
-]
-.
-newtab
--
-title
 :
 :
 before
@@ -1484,17 +1315,17 @@ controls
 svg
 "
 )
-7
-278
+0
+298
 28
-266
+256
 )
 ;
 background
 -
 size
 :
-10px
+20px
 ;
 content
 :
@@ -1503,7 +1334,7 @@ content
 ;
 height
 :
-17px
+20px
 ;
 left
 :
@@ -1515,7 +1346,7 @@ absolute
 ;
 width
 :
-10px
+20px
 ;
 margin
 -
@@ -1574,7 +1405,7 @@ background
 -
 size
 :
-24px
+26px
 ;
 border
 :
@@ -1582,15 +1413,15 @@ none
 ;
 height
 :
-24px
+26px
 ;
 width
 :
-24px
+26px
 ;
 top
 :
-4px
+8px
 ;
 }
 .
@@ -1618,7 +1449,7 @@ rtl
 {
 left
 :
-4px
+8px
 ;
 }
 .
@@ -1646,7 +1477,7 @@ rtl
 {
 right
 :
-4px
+8px
 ;
 }
 body
