--- a/browser/themes/shared/toolbarbuttons.inc.css
+++ b/browser/themes/shared/toolbarbuttons.inc.css
@@ -463,6 +463,31 @@ true
 .
 toolbarbutton
 -
+text
+#
+main
+-
+window
+:
+not
+(
+[
+customizing
+]
+)
+.
+toolbarbutton
+-
+1
+[
+disabled
+=
+true
+]
+>
+.
+toolbarbutton
+-
 badge
 -
 stack
