Bug 1406414 - Switch to an APNG loading indicator when the browser is under schedule pressure. r=francois,mconley
MozReview-Commit-ID: 13KnlI9QcvU

UltraBlame original commit: 53f5585bb94d8e9ae18ecba173724743b6433949

--- a/browser/themes/shared/tabs.inc.css
+++ b/browser/themes/shared/tabs.inc.css
@@ -651,6 +651,12 @@ throbber
 .
 tab
 -
+throbber
+-
+fallback
+.
+tab
+-
 icon
 -
 image
@@ -689,6 +695,12 @@ throbber
 .
 tab
 -
+throbber
+-
+fallback
+.
+tab
+-
 icon
 -
 image
@@ -714,6 +726,19 @@ width
 tab
 -
 throbber
+:
+not
+(
+[
+pinned
+]
+)
+.
+tab
+-
+throbber
+-
+fallback
 :
 not
 (
@@ -1034,6 +1059,40 @@ fill
 :
 #
 fff
+;
+}
+#
+tabbrowser
+-
+tabs
+[
+schedulepressure
+]
+.
+tab
+-
+throbber
+#
+tabbrowser
+-
+tabs
+:
+not
+(
+[
+schedulepressure
+]
+)
+.
+tab
+-
+throbber
+-
+fallback
+{
+display
+:
+none
 ;
 }
 .
@@ -2062,6 +2121,281 @@ blocked
 "
 )
 ;
+}
+.
+tab
+-
+throbber
+-
+fallback
+[
+busy
+]
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+tabbrowser
+/
+tab
+-
+connecting
+.
+png
+"
+)
+;
+}
+.
+tab
+-
+throbber
+-
+fallback
+[
+progress
+]
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+tabbrowser
+/
+tab
+-
+loading
+.
+png
+"
+)
+;
+}
+#
+TabsToolbar
+[
+brighttext
+]
+.
+tab
+-
+throbber
+-
+fallback
+[
+progress
+]
+:
+not
+(
+[
+selected
+=
+true
+]
+)
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+tabbrowser
+/
+tab
+-
+loading
+-
+inverted
+.
+png
+"
+)
+;
+}
+media
+(
+min
+-
+resolution
+:
+1
+.
+1dppx
+)
+{
+.
+tab
+-
+throbber
+-
+fallback
+[
+busy
+]
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+tabbrowser
+/
+tab
+-
+connecting
+2x
+.
+png
+"
+)
+;
+}
+.
+tab
+-
+throbber
+-
+fallback
+[
+progress
+]
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+tabbrowser
+/
+tab
+-
+loading
+2x
+.
+png
+"
+)
+;
+}
+#
+TabsToolbar
+[
+brighttext
+]
+.
+tab
+-
+throbber
+-
+fallback
+[
+progress
+]
+:
+not
+(
+[
+selected
+=
+true
+]
+)
+{
+list
+-
+style
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+tabbrowser
+/
+tab
+-
+loading
+-
+inverted
+2x
+.
+png
+"
+)
+;
+}
 }
 .
 tab
