--- a/browser/themes/shared/compacttheme.inc.css
+++ b/browser/themes/shared/compacttheme.inc.css
@@ -704,6 +704,31 @@ color
 ;
 }
 #
+TabsToolbar
+:
+-
+moz
+-
+lwtheme
+-
+darktext
+{
+-
+moz
+-
+appearance
+:
+-
+moz
+-
+mac
+-
+vibrancy
+-
+light
+;
+}
+#
 navigator
 -
 toolbox
