Backed out 4 changesets (bug 1408433, bug 1406391, bug 1408512) for crashing tests by touching the network contacting incoming.telemetry.mozilla.org on nightly builds
Backed out changeset 9bfd4b0927dc (bug 1408433)
Backed out changeset 555850d5107e (bug 1408512)
Backed out changeset 15d959b9123e (bug 1406391)
Backed out changeset e1f34ba9cecc (bug 1406391)

MozReview-Commit-ID: BVoGRsD73Hf

UltraBlame original commit: ad08d9064a7d4334dd33315622b58719ec4d0dac

--- a/toolkit/components/extensions/test/mochitest/test_chrome_ext_contentscript_telemetry.html
+++ b/toolkit/components/extensions/test/mochitest/test_chrome_ext_contentscript_telemetry.html
@@ -191,6 +191,88 @@ test
 is
 completed
 .
+/
+/
+NOTE
+:
+This
+is
+only
+needed
+on
+Android
+(
+which
+does
+not
+properly
+support
+unified
+telemetry
+/
+/
+while
+we
+'
+re
+always
+recording
+opt
+-
+out
+telemetry
+on
+desktop
+)
+.
+/
+/
+Switching
+the
+"
+toolkit
+.
+telemetry
+.
+enabled
+"
+preference
+/
+/
+(
+e
+.
+g
+.
+using
+SpecialPowers
+.
+pushPrefEnv
+)
+is
+unfortunately
+not
+enough
+/
+/
+because
+the
+TelemetryController
+has
+been
+already
+initialized
+when
+this
+/
+/
+code
+is
+going
+to
+be
+executed
+.
 const
 telemetryCanRecordBase
 =
